Re-work layout and responsive styles

--- a/_includes/edit.html
+++ b/_includes/edit.html
@@ -1,36 +1,19 @@
-<div class="lower_banner">
-	<br>
-	<br>
-	<br>
 <div class="container">
 	<div class="row">
-		<div class="col-sm-12">
+		<div class="col-md-offset-2 col-md-8">
 			<div class="panel panel-default">
-				<div class="panel-body">
-					<div class="table-responsive">
-						<table>
-							  <tr>
-								<td class="table-column-contribute-github">
-								   <img style="vertical-align: middle;" height="60px" width="70px" src="{{ site.baseurl }}/images/Octocat.png" alt="Intro to BaseSpace">
-								</td>
-								<td>
-									<div class="contribute-github-content">
-									   <h4>Contribute to the Article</h4>
-			    					   <p>
-											Want to edit or suggest changes to this content? You can edit and submit changes to this article <a target="_blank" href="{{ page.edithref }}">using GitHub</a>.
-									   </p>
-									</div>
-								</td>
-							  </tr>
-						</table>
-					</div>
+			  <div class="panel-body">
+			    <div class="media">
+				  <div class="media-left">
+			      	<img height="60" width="70" src="{{ site.baseurl }}/images/Octocat.png" alt="GitHub">
+				  </div>
+				  <div class="media-body">
+				    <h4 class="media-heading">Contribute to this article</h4>
+				    <p>Want to edit or suggest changes to this content? You can do so <a href="{{ page.edithref }}">using GitHub</a>.
+				  </div>
 				</div>
+			  </div>
 			</div>
 		</div>
 	</div>
 </div>
-	<br>
-	<br>
-</div>
-
-<!--{% include discourse.html %}
