--- a/_includes/article-sidebar.html
+++ b/_includes/article-sidebar.html
@@ -1,48 +1,35 @@
-<div class="col-xs-2 article-sidebar">
+<hr class="hidden-md hidden-lg" />
 
-  <div class="side-block">
-    <p class="related_section_heading">Related Articles</p>
-    <div class="related_section_content">
-      <p><a href="/articles/descriptive/ui-overview/">BaseSpace UI Overview</a></p>
-      <p><a href="{{ site.baseurl }}/articles/new-to-basespace/">Getting Started with BaseSpace</a></p>
-    </div>
-  </div>
+<h4>Related Articles</h4>
+<ul class="nav nav-stacked nav-pills">
+  <li><a href="/articles/descriptive/ui-overview/">BaseSpace UI Overview</a></li>
+  <li><a href="{{ site.baseurl }}/articles/new-to-basespace/">Getting Started with BaseSpace</a></li>
+</ul>
 
+<h4>Forums</h4>
+<p>Visit our <a target="_blank" href="https://support.basespace.illumina.com/">Forums</a> to engage with the BaseSpace Community</p>
 
-  <div class="side-block">
-    <p class="related_section_heading">Forums</p>
-    <div class="related_section_content">
-      <p>Visit our <a target="_blank" href="https://support.basespace.illumina.com/">Forums</a> to engage with the BaseSpace Community</p>
-    </div>
-  </div>
+<h4>Related Video</h4>
 
-  <div class="side-block">
-   
-    <div class="row">
-      <p class="related_section_heading_video">Related Video</p>
-    </div>
-    
-    <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ"><img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive">
-      <br>
-      <p>Introduction to BaseSpace</p>
-    </a>
-
-    <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <div>
-                        <iframe width="100%" height="350" src=""></iframe>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+<div class="thumbnail">
+  <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ">
+    <img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive" />
+  </a>
+  <div class="caption">
+    <h5>Introduction to BaseSpace</h5>
     <p>This video provides an introduction to BaseSpace and gives and overview of its functionality</p>
-
   </div>
-
-</div><!-- /.blog-sidebar -->
-
+</div>
+  
+<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-body">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <div>
+                  <iframe width="100%" height="350" src=""></iframe>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
