--- a/css/style.less
+++ b/css/style.less
@@ -1,17 +1,7 @@
 ---
 ---
+
 @import url("variables.less");
 @import url("font.less");
-@import url("headerfooter.less");
-@import url("typography.less");
-@import url("breadcrumb.less");
-@import url("article.less");
 @import url("articlestep.less");
-@import url("callout.less");
-@import url("sidebar.less");
-@import url("accordioncustom.less");
-@import url("landingpage.less");
-@import url("homepage.less");
-@import url("newtobasespace.less");
-@import url("lowerbannerhome.less");
-
+@import url("bsh.less");
