--- a/_less/bsh.less
+++ b/_less/bsh.less
@@ -70,7 +70,7 @@ h1, h2, h3, h4, h5, .navbar-brand {
 }
 
 #sidenav-list .nav > li > a {
-	border-right: 2px solid transparent;
+	border-right: 4px solid transparent;
 	font-size: 13px;
 }
 
@@ -83,6 +83,7 @@ h1, h2, h3, h4, h5, .navbar-brand {
 
 #sidenav-list .nav > li > ul > li > a {
 	padding: 3px 8px;
+	border-right-width: 2px;
 }
 
 #sidenav-list .nav > li.active > ul {
@@ -148,3 +149,77 @@ h1, h2, h3, h4, h5, .navbar-brand {
 }
 
 // end article styles
+
+
+// new to basespace styles
+
+.bsh-box-container {
+	.panel { 
+		height: 150px;
+
+		&:last-of-type {
+			margin-right: 0;
+		}
+	}
+}
+
+.bsh-big-section {
+    padding-top: 50px;
+}
+
+// carousel
+
+.card-image {
+	text-align: center;
+	height: 450px;
+
+	@media all (and max-width: @media-xs-max) {
+		height: auto;
+	}
+}
+
+.card-image > img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.carousel-caption {
+	margin-left: -18%;
+	margin-bottom: -30px;
+	z-index: 50;
+	background: none;
+	color: #000;
+	font-size: 1.5em;
+	color: #ffb441;
+	text-align:left;
+	text-shadow: none;
+	padding-top: 20px;
+	border-top: 1px solid #E4E4E4;
+
+	@media (max-width: 491px){
+  		margin-left: -15%;
+	}
+}
+
+.carousel-indicators {
+	position: relative;
+	display: block;
+	margin-left: 0px; 
+	left: 0%;
+	text-align: right;
+	width: 100%;
+	padding-right: 5px;
+	margin-top: -5px;
+}
+
+.carousel-indicators li{
+	border: 1px solid #ccc;
+	width: 1.2em;
+	height: 1.2em;
+} 
+
+.carousel-indicators .active {
+	background-color: #3FA9F5;
+	width: 1.2em;
+	height: 1.2em;
+}
