finish home page responsiveness

--- a/_less/article.less
+++ b/_less/article.less
@@ -5,6 +5,11 @@
 // @@@@@@@@@@@ CSS      @@@@@@@@@@@
 
 
+.bsh-header .navbar-nav > li > a {
+    line-height: 32px;
+}
+
+
 .article-title {
   margin-bottom: 25px;
   font: 200 28px/1.2em @font-header, sans-serif;
@@ -57,6 +62,7 @@ hr {
 
 /* SIDE NAV STYLES BEGIN */
 
+/* Side
 .bs-docs-sidebar {
     padding-right: 30px;
     
