--- a/css/style.less
+++ b/css/style.less
@@ -4,4 +4,6 @@
 @import url("variables.less");
 @import url("font.less");
 @import url("articlestep.less");
+@import url("headerfooter.less");
+@import url("homepage.less");
 @import url("bsh.less");
