--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -1,100 +1,30 @@
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
-                                           BASESPACE GREY HEADER WITH BASEPSACE AND ILLUMINA LOGO
+                                           BASESPACE HEADER WITH BASEPSACE SEARCH AND ILLUMINA LOGO
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+  %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
-body { 
-  @media all and (min-width: @media-sm-min) {
-    margin-top: 65px; 
-    padding-bottom: 50px;
-  }
-}
-
-.header {
+.bsh-header {
+  background: white;
   min-height: 65px;
-  border: 1px solid transparent;
-  background-color: #fff;
-  border-bottom: 1px solid #ededed;
-  margin-left: -50px;
-  margin-right: -30px;
-
-  @media (max-width: @media-xs-max) {
-      position: static;
-      margin-left: 0px;
-      margin-right: 0px;
-  }
+  margin-bottom: 0;
 }
 
+.bsh-header .navbar-brand {
+  height: 65px;
+  font-size: 1.5em;
+  line-height: 32px;
+}
 
-/* Logos for Navbar */
-
-.header-brand-baseSpace {
-  display:block;
-  padding-left: 30px;
-  height: 50px;
-  line-height: 20px;
+.bsh-header .navbar-form, .bsh-header .navbar-toggle {
   margin-top: 15px;
-  font: 200 22px/1.2em @font-header,sans-serif;
-  color: #666666;
-
-  sup {
-    font-size: 8px;
-  }
-
-  @media (max-width: @media-sm-max) {
-    font-size: 16px;
-    padding-left: 10px;
-    height: 25px;
-    line-height: 10px;
-    margin-top: 24px;
-  }
 }
 
-.header-brand-baseSpace:hover {
-  text-decoration: none;
+h1, h2, h3, h4, h5, .navbar-brand {
+  font-family: "HelveticaNeueW01-ThinEx 710288";
 }
-
-.header-brand-illumina {
-  float: left;
-  position: relative;
-  background-image: url("/images/ILLUMINA_LOGO.png");
-  background-repeat: no-repeat;
-  width: 100px;
-  height: 40px;
-  background-size: 100% auto;
-  margin: 15px 15px 0px 15px;
-
-  @media (max-width: 899px) {
-                              width: 80px;
-                              height: 40px;
-                              margin-top: 15px;
-                              display: none;
-                            }
-}
-
 
 /* Google search box */
-
-#googlecse {
-  width:0px;
-  overflow:hidden;
-  height:0px; 
-}
-
-#custom_search {
-  position: relative;
-  float: right;
-  padding-top: 14px;
-  padding-right: 20px;
-
-  @media (max-width: @media-xs-max) {
-    float: none;
-    padding-top: none;
-    margin-bottom: 15px;
-    margin-left: 10px;
-  }
-}
 
 input {
   border: 1px solid #cfcfcf;
@@ -115,17 +45,6 @@ input.gsc-search-button {
   display: none;
 }
 
-/* Custom container fluid without padding */
-.container-fluid-header {               
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.image-header{
-    width: 100%;
-    height: 65px;
-}
-
 
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
@@ -134,42 +53,3 @@ input.gsc-search-button {
 
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
-.custom-footer {                   /* Footer CSS */
-  font:200 14px/1.2em "pt-sans-regular",sans-serif;
-  background-color: #ffffff;
-  color: #666666;
-  height: 50px;
-  border-top: 1px solid #bbbbbb;
-
-  @media all and (max-width: @media-xs-max) {
-    position: static;
-  }
-}
-
-.footer-holder {
-  text-align: right;
-  margin-bottom: 0px;
-}
-
-.footer-list {
-  display: inline-block;
-  line-height: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
- 
-.footer-link {
-  text-decoration: none;
-  color: #666;
-}
-
-.footer-link:hover {
-  text-decoration: none;
-  color: #666;
-}
-
-/* Contribute Github */
-
-.contribute-github-content {
-    margin-left: 30px;
-}
