--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-bottom bsh-static-xs">
+<nav class="navbar navbar-default navbar-fixed-bottom bsh-static-xs bsh-footer">
   <div class="container">
     <div class="row">
           <div class="{% if page.is_homepage %}col-xs-12{% else %}col-xs-8 col-xs-offset-2{% endif %}">
