--- a/_less/articlestep.less
+++ b/_less/articlestep.less
@@ -71,10 +71,10 @@
 
 .step-description {
 	font-family: @font-text;
-    font-size: 1.28em;
+    font-size: 15px;
     color: @font-color;
     padding-left: 35px;
-    padding-top: 30px;
+    padding-top: 20px;
     line-height: @line-gap;
 }
 
