--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -53,3 +53,6 @@ input.gsc-search-button {
 
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
+.bsh-footer {
+  
+}
