--- a/_less/variables.less
+++ b/_less/variables.less
@@ -7,6 +7,7 @@
 
 /* Responsive sizes */
 
+@media-xs-min: 491px;
 @media-xs-max: 768px;
 @media-sm-min: 769px;
 @media-sm-max: 992px;
@@ -36,6 +37,7 @@
 @font-alt: "Helvetica";
 @font-color: #666;  //Grey color for the font
 @link-color: #3fa9f5; // color for links
+@sidenav-blue: #328ed1;
 @line-gap: 22px;
 
 /* Related Section Content */
