--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -9,7 +9,7 @@ is_article: true
 
 <div class="container">
   <div class="row">
-    <div class="col-md-2 hidden-sm hidden-xs">
+    <div class="col-lg-2 col-md-2 hidden-sm hidden-xs">
       <div id="sidenav-list" class="affix" style="display:none;">
         {% if page.headings and page.headings.size > 0 %}
           <ul class="nav nav-stacked text-right">
@@ -35,7 +35,8 @@ is_article: true
         {% endif %}
       </div>
     </div><!-- /end side nav column -->
-    <div class="{% if page.hide_right_sidebar %}col-md-10{% else %}col-md-8{% endif %}">
+    
+    <div class="{% if page.hide_right_sidebar %}col-lg-10 col-md-10{% else %}col-lg-8 col-md-8{% endif %}">
       <!-- Article Header -->
       {% if (page.hide_article_title == null || page.hide_article_title == false) %}
         <h1 class="bsh-article-title">{{ page.title }}</h1>
@@ -47,13 +48,18 @@ is_article: true
         {{ content }}
       </div> 
       <!-- Article-body ends -->
+    
     </div><!-- /end main content column -->
+    
     {% if page.hide_right_sidebar == null %}
-    <div class="col-md-2">
-      {% include article-sidebar.html %}
-    </div><!-- /end related content column -->
+      <div class="col-lg-2 col-md-2">
+        {% include article-sidebar.html %}
+      </div><!-- /end related content column -->
     {% endif %}
+  
   </div><!-- /end main .row -->
+
 </div><!-- /end .container -->
+
 <!--  container ends -->
 {% include edit.html %}
