--- a/_less/accordioncustom.less
+++ b/_less/accordioncustom.less
@@ -1,9 +1,3 @@
-
-.landing-page {
-  margin-top: 30px;
-}
-
-
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
                                             Accordion
@@ -22,7 +16,7 @@
   .accordion-new {
     padding-top: 10px;
     margin-bottom: 0px;
-    margin-left: 25px;
+    margin-left: 5px;
   }
 
   
@@ -77,10 +71,9 @@
       
       font:200 14px/1.2em @font-text, @font-alt ,sans-serif;
       line-height: 35px;
+      color: @link-color;
      
+      &:hover {
+        color: @link-color;
+      }
   }
-
-  .accordion-link:hover{
-      text-decoration: underline;
-  }
-
