--- a/_less/article.less
+++ b/_less/article.less
@@ -9,137 +9,88 @@
     line-height: 32px;
 }
 
-
-.article-title {
+.bsh-article-title {
   margin-bottom: 25px;
   font: 200 28px/1.2em @font-header, sans-serif;
   color: @article-color;
   letter-spacing: 1px;
 
-  @media (max-width: 491px) {
+  @media (max-width: @media-xs-min) {
     margin-top: 50px;
   }
 }
 
-.article-content {
+.bsh-article-content {
     margin: 20px 40px 40px 0px;
     font-family: @font-text;
     color: @font-color;
     line-height: @line-gap;
-}
 
-.article-content > p {
-    font-size: 14px;
-}
-
-.article-content > h2 {
-    text-transform: uppercase;
-}
-
-/*.article-content > h3 {
-    padding-top: 20px;
-}
-
-.article-content > h4 {
-    padding-top: 30px;
-}*/
-
-.article-sidebar {
-    margin-left: 30px; 
-    margin-top: 45px;
-    float: left; 
-}
-
-.main-layout {
-    margin-top: 30px;
-    padding-left: 40px;
-}
-
-hr {
-    border-color: #999;
-    background-color: #999;
-}
-
-/* SIDE NAV STYLES BEGIN */
-
-/* Side
-.bs-docs-sidebar {
-    padding-right: 30px;
-    
-    @media all and (max-width: @media-xs-max) {
-        display: none;
+    > p {
+        font-size: 14px;
     }
+
+    > h2 {
+        text-transform: uppercase;
+    }
+
 }
 
-#sidenav {
+/* Sidenav styles begin */
+
+#sidenav-list.affix {
+    top: 114px;
+    width: 159px;
     border-right: 1px solid #e5e5e5;
-    display: none;
-    margin-top: 50px;
-    float: left;
-    padding-right: 0px;
-}
 
-/* all links */
-.nav>li>a {
-    color: #999;
-    border-right: 2px solid transparent;
-    position: relative;
-    right: -1px;
-    padding: 4px 20px;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 250%;
-    text-align: right;
-}
-
-/* nested links */
-.nav .nav>li>a {
-    padding-top: 1px;
-    padding-bottom: 1px;
-    padding-left: 30px;
-    font-size: 12px;
-    line-height: 150%;
-}
-
-/* active & hover links */
-.nav>.active>a, 
-.nav>li>a:hover, 
-.nav>li>a:focus {
-    color: #328ED1;                 
-    text-decoration: none;          
-    background-color: transparent;  
-    border-right-color: #328ED1; 
-}
-
-/* all active links */
-.nav>.active>a, 
-.nav>.active:hover>a,
-.nav>.active:focus>a {
-    font-weight: 700;
-}
-
-/* nested active links */
-.nav .nav>.active>a, 
-.nav .nav>.active:hover>a,
-.nav .nav>.active:focus>a {
-    font-weight: 500;
-}
-
-/* hide inactive nested list */
-.nav ul.nav {
-    display: none;           
-}
-
-/* show active nested list */
-.nav>.active>ul.nav {
-    display: block;           
-}
-
-@media screen and (max-width: 500px){
-    #sidenav {
-        display:none
+    @media all and (max-width: @media-md-max) {
+        width: 125px;
     }
 }
 
+#sidenav-list .nav > li > a {
+    font-size: 13px;
+    color: #999;
 
+    &:hover {
+        color: @sidenav-blue;
+        border-right: 2px solid @sidenav-blue;
+        background-color: #fff;
+    }
+}
 
+#sidenav-list .nav > li > ul {
+    max-height: 0;
+    transition: 0.25s ease all;
+    opacity: 0;
+    overflow: hidden;
+}
+
+#sidenav-list .nav > li > ul > li > a {
+    padding: 3px 8px;
+    font-size: 13px;
+
+     &:hover {
+        color: @sidenav-blue;
+        border-right: 1px solid @sidenav-blue;
+    }
+}
+
+#sidenav-list .nav > li.active > ul {
+    max-height: 1200px;
+    transition: 0.25s ease all;
+    opacity: 1;
+
+    > li.active > a {
+        color: @sidenav-blue;
+        font-weight: 200;
+    }
+}
+
+#sidenav-list .nav > li.active > a {
+    border-right: 2px solid @sidenav-blue;
+    color: @sidenav-blue;
+    font-weight: 600;
+    z-index: 1;
+    margin-right: -1px;
+}
