--- a/css/style.less
+++ b/css/style.less
@@ -3,7 +3,10 @@
 
 @import url("variables.less");
 @import url("font.less");
+@import url("accordioncustom.less");
+@import url("article.less");
 @import url("articlestep.less");
+@import url("breadcrumb.less");
 @import url("headerfooter.less");
 @import url("homepage.less");
 @import url("bsh.less");
