--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -50,7 +50,8 @@ a.bsh-well {
   display: block;
   background-color: #fff;
   color: #666666;
-  border: 1px solid #bbb;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.1);
+  border: 1px solid #dbdbdb;
   padding-top: 28px;
   padding-bottom: 20px;
   padding-left: 25px;
