fix popular <li> selector

--- a/_less/bsh.less
+++ b/_less/bsh.less
@@ -4,6 +4,17 @@ body {
    width: 320px;
 }
 
+a {
+	color: @link-color;
+
+	&:hover {
+		color: @link-color;
+	}
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+	font-weight: 700;
+}
 
 .bsh-breadcrumb-bg {
 	background: #ededed;
