--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -34,6 +34,11 @@ body {
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 .bsh-banner {
+  
+  h1 { 
+    font-weight: 500;
+  }
+
   background-image: url(/images/illumina-purple-banner.jpg);
   color: #fff;
   margin-bottom: 65px;
@@ -152,7 +157,7 @@ a.bsh-well {
   color: @earth-pumpkin-color;
 }
 
-.popular-article-link {
+.nav > li > a.popular-article-link {
   color: @link-color;
   line-height: 15px;
 
@@ -187,6 +192,9 @@ a.bsh-well {
   box-shadow: rgba(0,0,0,.24) 0 0 10px 0 inset;
   border-bottom: 1px solid #ccc;
 
+  .lghtbox > img {
+    border: 1px solid #ccc;
+  }
 
   .home-title {
     margin-bottom: 30px;
