--- a/css/style.less
+++ b/css/style.less
@@ -9,4 +9,5 @@
 @import url("breadcrumb.less");
 @import url("headerfooter.less");
 @import url("homepage.less");
+@import url("newtobasespace.less");
 @import url("bsh.less");
