Fix new-to-basespace panel styles

--- a/_includes/article-sidebar.html
+++ b/_includes/article-sidebar.html
@@ -11,15 +11,13 @@
 
 <h4>Related Video</h4>
 
-<div class="thumbnail">
-  <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ">
-    <img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive" />
-  </a>
+<a href="#" class="thumbnail bsh-thumbnail" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ">
+  <img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive" />
   <div class="caption">
     <h5>Introduction to BaseSpace</h5>
     <p>This video provides an introduction to BaseSpace and gives and overview of its functionality</p>
   </div>
-</div>
+</a>
   
 <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true">
   <div class="modal-dialog">
