fix new to basespace card description part

--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -135,3 +135,58 @@
   background-image: -ms-radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%);
   background-image: radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%)
 }
+
+.section-title {
+  color: @earth-pumpkin-color;
+  margin-bottom: 50px;
+}
+
+.num-circle {
+  width: 35px;
+  height: 35px;
+  border-radius: 17.5px;
+  background: #ffffff;
+  border: 1px solid #d4d4d4;
+  font-size: 1.3em;
+  text-align: center;
+  padding-top: 0.4em;
+  float: left;
+  margin-top: 8px;
+}
+
+.card-title-open {
+
+  padding-top: 11px;
+  padding-left: 7px;
+
+  > h3 {
+    color: #BE74AE;
+  }
+
+  > p {
+    padding-top: 10px;
+  }
+} 
+
+.card-left-bottom {
+  margin-top: 100px;  
+  border-top: 1px solid #f2f2f2;
+  padding-top: 20px;
+  padding-left: inherit;
+
+  @media (max-width: @media-xs-min) {
+      margin-top: 30px; 
+      padding-left: 0px;
+      margin-bottom: 50px;
+  }
+}
+
+.card-further-title {
+  color: #cccccc;
+}
+
+.card-links {
+  list-style-type: none;
+  line-height: 200%;
+  padding-left: 0;
+}
