--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -141,6 +141,10 @@
   margin-bottom: 50px;
 }
 
+.card-step {
+  padding: 5px 5px 0px 5px;  
+}
+
 .num-circle {
   width: 35px;
   height: 35px;
@@ -169,7 +173,7 @@
 } 
 
 .card-left-bottom {
-  margin-top: 100px;  
+  margin-top: 200px;  
   border-top: 1px solid #f2f2f2;
   padding-top: 20px;
   padding-left: inherit;
@@ -190,3 +194,62 @@
   line-height: 200%;
   padding-left: 0;
 }
+
+//carousel styles 
+
+.card-image {
+  text-align: center;
+  height: 450px;
+
+  @media (max-width: @media-xs-max) {
+    height: 350px;
+  }
+}
+
+.card-image > img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.carousel-caption {
+  margin-left: -18%;
+  margin-bottom: -30px;
+  z-index: 50;
+  background: none;
+  color: #000;
+  font-size: 1.2em;
+  color: #ffb441;
+  text-align:left;
+  text-shadow: none;
+  padding-top: 20px;
+  border-top: 1px solid #E4E4E4;
+
+  @media (max-width: @media-xs-max){
+      margin-left: -15%;
+  }
+}
+
+.carousel-indicators {
+  position: relative;
+  display: block;
+  margin-left: 0px; 
+  left: 0%;
+  text-align: right;
+  width: 100%;
+  padding-right: 5px;
+  margin-top: -5px;
+}
+
+.carousel-indicators li{
+  border: 1px solid #ccc;
+  width: 1.2em;
+  height: 1.2em;
+} 
+
+.carousel-indicators .active {
+  background-color: #3FA9F5;
+  width: 1.2em;
+  height: 1.2em;
+}
+
+//carousel styles end
