apply new styles to all sections - 2

--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -136,6 +136,12 @@
   background-image: radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%)
 }
 
+
+
+.bsh-big-section {
+    padding-top: 50px;
+}
+
 .section-title {
   color: @earth-pumpkin-color;
   margin-bottom: 50px;
@@ -253,3 +259,20 @@
 }
 
 //carousel styles end
+
+#links-summary {
+  .row {
+    border-top: 1px solid #d7d7d7;
+    padding-top: 20px;
+
+
+    .col-sm-6 > h4 {
+      color: #f68920;
+    }
+  }
+
+  .list-unstyled {
+    line-height: 300%;
+  }
+
+}
