--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -7,6 +7,7 @@
   background-color: #fff;
   border-bottom: 1px solid #ccc;
   padding-bottom: 30px;
+  border-radius: 0;
 
   > h1 {
     margin-bottom: 25px;
@@ -29,7 +30,6 @@
   color: #666666;
   letter-spacing: 1px;
   margin-bottom: 40px;
-  margin-top: 40px;
 }
 
 .bsh-row {
@@ -144,11 +144,11 @@
 
 .section-title {
   color: @earth-pumpkin-color;
-  margin-bottom: 50px;
 }
 
 .card-step {
-  padding: 5px 5px 0px 5px;  
+  padding: 5px 5px 0px 5px; 
+  margin-top: 40px; 
 }
 
 .num-circle {
@@ -270,9 +270,4 @@
       color: #f68920;
     }
   }
-
-  .list-unstyled {
-    line-height: 300%;
-  }
-
 }
