--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -30,6 +30,8 @@
   border-top: 1px solid #ccc;
 }
 
+.bsh-footer .nav > li { display: inline-block; }
+
 h1, h2, h3, h4, h5, .navbar-brand {
   font-family: "HelveticaNeueW01-ThinEx 710288";
 }
