fix anchor navigation issue on new to basespace page

--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -139,11 +139,13 @@
 
 
 .bsh-big-section {
-    padding-top: 50px;
+  padding-top: 50px;
 }
 
 .section-title {
   color: @earth-pumpkin-color;
+  margin-top: -@anchor-heading-offset;
+  padding-top: @anchor-heading-offset;
 }
 
 .card-step {
@@ -171,6 +173,8 @@
 
   > h3 {
     color: #BE74AE;
+    margin-top: -@anchor-heading-offset;
+    padding-top: @anchor-heading-offset;
   }
 
   > p {
