--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -174,7 +174,7 @@
   > h3 {
     color: #BE74AE;
     margin-top: -@anchor-heading-offset;
-    padding-top: @anchor-heading-offset;
+  padding-top: @anchor-heading-offset;
   }
 
   > p {
@@ -188,10 +188,8 @@
   padding-top: 20px;
   padding-left: inherit;
 
-  @media (max-width: @media-xs-min) {
-      margin-top: 30px; 
-      padding-left: 0px;
-      margin-bottom: 50px;
+  @media (max-width: @media-xs-max) {
+      display:none;
   }
 }
 
