--- a/_less/breadcrumb.less
+++ b/_less/breadcrumb.less
@@ -5,6 +5,28 @@
   padding-right: 8px;  
 }
 
+.bsh-breadcrumb-bg {
+  background: #ededed;
+  padding: 8px 15px;
+  margin-bottom: 20px;
+  position: fixed;
+  top: 65px;
+  width: 100%;
+  z-index: 20;
+
+  @media all and (max-width: @media-xs-max) {
+    position: static;
+    top: auto;
+    width: auto;
+  }
+}
+
+.bsh-breadcrumb {
+  background: none;
+  padding: 0;
+  margin: 0;
+}
+
 .menu-box {
   float: right;
   background-color: #ededed;;
