added a resized logo

--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -25,15 +25,12 @@
   border: none;
 }
 
-.bsh-footer {
-  background: white;
-  border-top: 1px solid #ccc;
-}
-
-.bsh-footer .nav > li { display: inline-block; }
-
 h1, h2, h3, h4, h5, .navbar-brand {
   font-family: "HelveticaNeueW01-ThinEx 710288";
+}
+
+.header-brand-illumina {
+  width: 95px;
 }
 
 /* Google search box */
@@ -66,5 +63,8 @@ input.gsc-search-button {
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 .bsh-footer {
-  
+  background: white;
+  border-top: 1px solid #ccc;
 }
+
+.bsh-footer .nav > li { display: inline-block; }
