--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 				      <ul class="nav navbar-nav navbar-right hidden-xs {% if page.is_homepage == null %}hidden-md{% endif %}">
 				        <li>
 				        	<a href="http://www.illumina.com/" target="_blank">
-			  	    			<img class="header-brand-illumina" src="/images/ILLUMINA_LOGO.png" width="85" />
+			  	    			<img class="header-brand-illumina" src="/images/ILLUMINA_LOGO_small_new.png" />
 			  	    		</a>
 		  	    		</li>
 				      </ul>
