fixed sidebar padding

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -52,7 +52,7 @@ is_article: true
     </div><!-- /end main content column -->
     
     {% if page.hide_right_sidebar == null %}
-      <div class="col-lg-2 col-md-2">
+      <div class="col-lg-2 col-md-2 bsh-article-sidebar">
         {% include article-sidebar.html %}
       </div><!-- /end related content column -->
     {% endif %}
