--- a/_less/article.less
+++ b/_less/article.less
@@ -102,3 +102,21 @@
     z-index: 1;
     margin-right: -1px;
 }
+
+/* Sidebar styles */
+
+.bsh-article-sidebar {
+    margin-top: 5px;
+
+    > h4 {
+        margin-top: 30px;
+    }
+
+    .nav > li > a {
+        padding-left: 0;
+
+        &:hover {
+            background-color: #fff;
+        }
+    }
+}
