--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom bsh-static-xs bsh-footer">
   <div class="container">
     <div class="row">
-          <div class="{% if page.is_homepage %}col-xs-12{% else %}col-xs-8 col-xs-offset-2{% endif %}">
+          <div class="col-xs-12">
             <ul class="nav navbar-nav pull-right">
              <li><a target="_blank" class="footer-link" href="https://basespace.illumina.com">BaseSpace</a></li>
              <li><a target="_blank" class="footer-link" href="https://basespace.illumina.com/faq">FAQ</a></li>
