--- a/_less/breadcrumb.less
+++ b/_less/breadcrumb.less
@@ -2,7 +2,17 @@
 // Menu box
 
 .bsh-breadcrumb-left {
-  padding-right: 8px;  
+  padding-right: 8px;
+  margin-left: -149px;
+
+  @media (max-width: @media-md-max) {
+    margin-left: -116px;
+  }
+}
+
+.bsh-breadcrumb-left-toggle {
+  padding-right: 8px;
+  margin-left: 0px;
 }
 
 .bsh-breadcrumb-bg {
