--- a/_includes/article-sidebar.html
+++ b/_includes/article-sidebar.html
@@ -1,24 +1,31 @@
-<hr class="hidden-md hidden-lg" />
+<div class="row">
+  <hr />
 
-<h4>Related Articles</h4>
-<ul class="nav nav-stacked nav-pills">
-  <li><a href="/articles/descriptive/ui-overview/">BaseSpace UI Overview</a></li>
-  <li><a href="{{ site.baseurl }}/articles/new-to-basespace/">Getting Started with BaseSpace</a></li>
-</ul>
-
-<h4>Forums</h4>
-<p>Visit our <a target="_blank" href="https://support.basespace.illumina.com/">Forums</a> to engage with the BaseSpace Community</p>
-
-<h4>Related Video</h4>
-
-<a href="#" class="thumbnail bsh-thumbnail" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ">
-  <img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive" />
-  <div class="caption">
-    <h5>Introduction to BaseSpace</h5>
-    <p>This video provides an introduction to BaseSpace and gives and overview of its functionality</p>
+  <div class="col-sm-4">
+    <h4>Related Articles</h4>
+    <ul class="nav nav-stacked nav-pills">
+      <li><a href="/articles/descriptive/ui-overview/">BaseSpace UI Overview</a></li>
+      <li><a href="{{ site.baseurl }}/articles/new-to-basespace/">Getting Started with BaseSpace</a></li>
+    </ul>
   </div>
-</a>
-  
+
+  <div class="col-sm-4">
+    <h4>Forums</h4>
+    <p>Visit our <a target="_blank" href="https://support.basespace.illumina.com/">Forums</a> to engage with the BaseSpace Community</p>
+  </div>
+
+  <div class="col-sm-4">
+    <h4>Related Video</h4>
+    <a href="#" class="thumbnail bsh-thumbnail" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ">
+      <img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive" />
+      <div class="caption">
+        <h5>Introduction to BaseSpace</h5>
+      </div>
+    </a>
+  </div>
+
+</div>  
+
 <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true">
   <div class="modal-dialog">
       <div class="modal-content">
