--- a/_less/articlestep.less
+++ b/_less/articlestep.less
@@ -1,5 +1,5 @@
 .step-box-whole {
-	width: 95%;
+	width: 100%;
 	margin-top: 10px;
 	margin-bottom: 50px;
 }
@@ -25,29 +25,20 @@
 
 .the-step {
 	font-family: "pt-sans-regular";
-    font-size: 120%;
+    font-size: 16px;
     color: #bbbbbb;
     float: left;
     margin-top: -1px;
     padding-right: 2px;
-
-    @media (max-width: 1440px){
-   		font-size: 95%;
-  	}
-   
 }
 
 .step-number {
 	font-family: Arial;
-    font-size: 240%;
+    font-size: 28px;
     color: #333333;
     font-weight: bold;
     float: right;
     margin-top: 2px;
-
-    @media (max-width: 1440px){
-    	font-size: 180%;
-  	}
 }
 
 .right-column{
@@ -59,14 +50,12 @@
 
 .step-title {
 	margin-top: -87px;
-	padding-top: 110px;
+	padding-top: 104px;
 	padding-left: 35px;
 	font-family: @font-header;
 	font-weight: bold;
-	font-size: 170%;
 	letter-spacing: 2px;
     color: #666666;
-    text-transform: uppercase;
 }
 
 .step-description {
