fix videos padding

--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -242,6 +242,10 @@ a.bsh-well {
 
 }
 
+a.bsh-thumbnail {
+  padding:10px;
+}
+
 .bsh-additional-container {
   background: #ececec;
   border-top: 1px solid #e7e5e5;
