--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -67,4 +67,10 @@ input.gsc-search-button {
   border-top: 1px solid #ccc;
 }
 
-.bsh-footer .nav > li { display: inline-block; }
+.bsh-footer .nav > li { 
+  display: inline-block; 
+
+  > a:hover {
+    color: @link-color;
+  }
+}
